change path for images

--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@
         <main id="home" class="content">
             <div class="soc-icons">
                 <a target="_blank" href="https://www.linkedin.com/in/izabela-krupinska-161a351a5"><img
-                        class="soc-link linkedin-link" src="/assets/images/linkedin.svg" alt="linkedin logo"></a>
+                        class="soc-link linkedin-link" src="assets/images/linkedin.svg" alt="linkedin logo"></a>
                 <a target="_blank" href="https://github.com/Izabela88"><img class="soc-link github-icon"
-                        src="/assets/images/icons8-github.svg" alt="github logo"></a>
+                        src="assets/images/icons8-github.svg" alt="github logo"></a>
 
             </div>
-            <img id="snail" class="hero-img" src="/assets/images/jelly-yellow-snail-waving-hand.png" alt="snail">
-            <img id="sun" class="hero-img-two" src="/assets/images/jelly-yellow-sun-with-rays-2.png" alt="sun">
-            <img id="logo" class="logo" src="/assets/images/logo.png" alt="logo">
-            <img id="monster" class="icon" src="/assets/images/jelly-black-character-droplet-1.png" alt="stripes">
+            <img id="snail" class="hero-img" src="assets/images/jelly-yellow-snail-waving-hand.png" alt="snail">
+            <img id="sun" class="hero-img-two" src="assets/images/jelly-yellow-sun-with-rays-2.png" alt="sun">
+            <img id="logo" class="logo" src="assets/images/logo.png" alt="logo">
+            <img id="monster" class="icon" src="assets/images/jelly-black-character-droplet-1.png" alt="stripes">
             <div class="container">
                 <div id="text" class="main-txt">
                     <p>Welcome beautiful people visiting my portfolio website! <br> I am Izabela - Full Stack Developer</p>
@@ -83,30 +83,30 @@
             <div class="container">
                 <div class="skills-container">
                     <div id="s-snail" class="snail">
-                        <img class="s-snail" src="/assets/images/jelly-character-coding.png" alt="snail">
-                        <img class="s-lines" src="/assets/images/jelly-tree-yellow-lines.png" alt="lines">
-                        <img class="s-bulb" src="/assets/images/jelly-yellow-big-lamp.png" alt="bulb">
+                        <img class="s-snail" src="assets/images/jelly-character-coding.png" alt="snail">
+                        <img class="s-lines" src="assets/images/jelly-tree-yellow-lines.png" alt="lines">
+                        <img class="s-bulb" src="assets/images/jelly-yellow-big-lamp.png" alt="bulb">
                     </div>
                     <div class="skill-icon css">
-                        <img src="/assets/images/css-3.png" alt="icon">
+                        <img src="assets/images/css-3.png" alt="icon">
                     </div>
                     <div class="skill-icon django">
-                        <img src="/assets/images/django.svg" alt="icon">
+                        <img src="assets/images/django.svg" alt="icon">
                     </div>
                     <div class="skill-icon github">
-                        <img src="/assets/images/github.png" alt="icon">
+                        <img src="assets/images/github.png" alt="icon">
                     </div>
                     <div class="skill-icon html">
-                        <img src="/assets/images/html-5.png" alt="icon">
+                        <img src="assets/images/html-5.png" alt="icon">
                     </div>
                     <div class="skill-icon js">
-                        <img src="/assets/images/js.png" alt="icon">
+                        <img src="assets/images/js.png" alt="icon">
                     </div>
                     <div class="skill-icon postgress">
-                        <img src="/assets/images/postgress.png" alt="icon">
+                        <img src="assets/images/postgress.png" alt="icon">
                     </div>
                     <div class="skill-icon python">
-                        <img src="/assets/images/python.png" alt="icon">
+                        <img src="assets/images/python.png" alt="icon">
                     </div>
                 </div>
             </div>
@@ -120,7 +120,7 @@
                 <!-- https://codepen.io/katywellington91/pen/PoGVzwZ -->
                 <div class="card">
                     <div class="imgBx">
-                        <img src="/assets/images/jelly-blue-ball-character.png">
+                        <img src="assets/images/jelly-blue-ball-character.png">
                     </div>
                     <div class="contentBx">
                         <h3>mt elevators</h3>
@@ -143,7 +143,7 @@
                 </div>
                 <div class="card">
                     <div class="imgBx">
-                        <img src="/assets/images/jelly-the-chef-completed-the-order-and-brought-the-dish.png">
+                        <img src="assets/images/jelly-the-chef-completed-the-order-and-brought-the-dish.png">
                     </div>
                     <div class="contentBx">
                         <h3>cupandcake</h3>
@@ -154,7 +154,7 @@
                 </div>
                 <div class="card">
                     <div class="imgBx">
-                        <img src="/assets/images/jelly-black-character-with-a-long-arm.png">
+                        <img src="assets/images/jelly-black-character-with-a-long-arm.png">
                     </div>
                     <div class="contentBx">
                         <h3>brainstorm quiz</h3>
@@ -166,7 +166,7 @@
                 </div>
                 <div class="card">
                     <div class="imgBx">
-                        <img src="/assets/images/jelly-yellow-one-eyed-character-with-a-tie-2.png">
+                        <img src="assets/images/jelly-yellow-one-eyed-character-with-a-tie-2.png">
                     </div>
                     <div class="contentBx">
                         <h3>walkers</h3>
@@ -177,7 +177,7 @@
                 </div>
                 <div class="card">
                     <div class="imgBx">
-                        <img src="/assets/images/jelly-red-one-eyed-character.png">
+                        <img src="assets/images/jelly-red-one-eyed-character.png">
                     </div>
                     <div class="contentBx">
                         <h3>norah's ceramics</h3>
