--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
                     <p>During the course I got to know Python and I like this programming language the most.</p>
                     <p>My biggest dream?</p>
                     <p>Work in a professional team where I could further develop my programming skills.</p>
-                    <a class="cv" href="#" download>download my CV</a>
+                    <a class="cv" href="assets/images/Izabela_Krupinska_CV.pdf" download>download my CV</a>
                 </div>
                 <div class="half-two">
                     <div class="me-img">
