update about me txt

--- a/about.html
+++ b/about.html
@@ -58,18 +58,19 @@
 
             <div class="container">
                 <div class="half">
-                    <p>I'm self-taught.</p>
-                    <p>I started learning coding at the end of 2019.</p>
-                    <p>2021/2022 was a key time for me.</p>
-                    <p>I have obtained a Diploma in Software Development (E-commerce Applications) with Code Institute.
-                    </p>
-                    <p>Code Institute’s Diploma in Full Stack Software Development is an intense and rewarding coding
-                        bootcamp created and validated by tech industry experts and academics.</p>
-                    <p>During the bootcamp, I made five projects myself, which you can see in the <a
-                            href="index.html#projects">projects</a> section.</p>
-                    <p>During the course I got to know Python and I like this programming language the most.</p>
-                    <p>My biggest dream?</p>
-                    <p>Work in a professional team where I could further develop my programming skills.</p>
+                    <p>I'm self-taught.
+                        I started learning coding at the end of 2019. <br> <br>
+                        2021/2022 was an important time for me.
+                        I have obtained a Diploma in Software Development (E-commerce Applications) from Code Institute.
+                        Code Institute's Diploma in Full Stack Software Development is an intense and rewarding coding
+                        Bootcamp created and validated by tech industry experts and academics.
+                        During the Bootcamp, I made five projects myself, which you can see in the <a
+                            href="index.html#projects">projects</a> section.
+                        During the course, I learned Python, and I like this programming language the most. <br><br>
+                        I am a hardworking person and I am eager to set myself new challenges. I love learning new things in programming. <br><br>
+                        My biggest dream?
+                        Work in a professional team where I could further develop my programming skills.</p>
+
                     <a class="cv" href="assets/images/Izabela_Krupinska_CV.pdf" download>download my CV</a>
                 </div>
                 <div class="half-two">
