--- a/about.html
+++ b/about.html
@@ -55,8 +55,8 @@
         <!-- about -->
         <section id="about" class="section">
             <h2>about me</h2>
-
             <div class="container">
+                <a class="bck-link" href="index.html">back to home</a>
                 <div class="half">
                     <p>I'm self-taught.
                         I started learning coding at the end of 2019. <br> <br>
