Add media queries

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         role="menuitem">About</a>
                 </li>
                 <li class="menu__item" role"none"><a class="close-sidebar menu__link" href="about.html" role="menuitem"
-                        tabindex="-1">Check CV</a></li>
+                        tabindex="-1">Download CV</a></li>
             </ul>
         </nav>
         <main id="home" class="content">
