Add media queries

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         </div>
     </section>
 
-    <footer>
+    <footer class="footer">
         <p>Illustrations from
             <a target="_blank" href="https://icons8.com/illustrations/style--jelly">Icons 8 Ouch</a>
         </p>
