--- a/about.html
+++ b/about.html
@@ -52,26 +52,30 @@
                         tabindex="-1">Download CV</a></li>
             </ul>
         </nav>
+    </div>
         <!-- about -->
         <section id="about" class="section">
             <h2>about me</h2>
             <div class="container">
                 <a class="bck-link" href="index.html">back to home</a>
                 <div class="half">
-                    <p>I'm self-taught.
-                        I started learning coding at the end of 2019. <br> <br>
-                        2021/2022 was an important time for me.
-                        I have obtained a Diploma in Software Development (E-commerce Applications) from Code Institute.
-                        Code Institute's Diploma in Full Stack Software Development is an intense and rewarding coding
-                        Bootcamp created and validated by tech industry experts and academics.
-                        During the Bootcamp, I made five projects myself, which you can see in the <a
-                            href="index.html#projects">projects</a> section.
-                        During the course, I learned Python, and I like this programming language the most. <br><br>
-                        I am a hardworking person and I am eager to set myself new challenges. I love learning new things in programming. <br><br>
-                        My biggest dream?
-                        Work in a professional team where I could further develop my programming skills.</p>
+                    <div class="about-txt">
+                        <p>I'm self-taught.
+                            I started learning coding at the end of 2019. <br> <br>
+                            2021/2022 was an important time for me.
+                            I have obtained a Diploma in Software Development (E-commerce Applications) from Code Institute.
+                            Code Institute's Diploma in Full Stack Software Development is an intense and rewarding coding
+                            Bootcamp created and validated by tech industry experts and academics.
+                            During the Bootcamp, I made five projects myself, which you can see in the <a
+                                href="index.html#projects">projects</a> section.
+                            During the course, I learned Python, and I like this programming language the most. <br><br>
+                            I am a hardworking person and I am eager to set myself new challenges. I love learning new things in programming. <br><br>
+                            My biggest dream?
+                            Work in a professional team where I could further develop my programming skills.</p>
+    
+                        <a class="cv" href="assets/images/Izabela_Krupinska_CV.pdf" download>download my CV</a>
 
-                    <a class="cv" href="assets/images/Izabela_Krupinska_CV.pdf" download>download my CV</a>
+                    </div>
                 </div>
                 <div class="half-two">
                     <div class="me-img">
@@ -80,9 +84,9 @@
                 </div>
             </div>
         </section>
-    </div>
+ 
 
-    <footer>
+    <footer class="footer">
         <p>Illustrations from
             <a target="_blank" href="https://icons8.com/illustrations/style--jelly">Icons 8 Ouch</a>
         </p>
