Add id to download link

--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
                 <li class="menu__item" role"none"><a class="close-sidebar menu__link" href="about.html"
                         role="menuitem">About</a>
                 </li>
-                <li class="menu__item" role"none"><a class="close-sidebar menu__link" href="about.html" role="menuitem"
+                <li class="menu__item" role"none"><a class="close-sidebar menu__link" href="about.html#download" role="menuitem"
                         tabindex="-1">Download CV</a></li>
             </ul>
         </nav>
@@ -73,7 +73,7 @@
                             My biggest dream?
                             Work in a professional team where I could further develop my programming skills.</p>
     
-                        <a class="cv" href="assets/images/Izabela_Krupinska_CV.pdf" download>download my CV</a>
+                        <a id="download" class="cv" href="assets/images/Izabela_Krupinska_CV.pdf" download>download my CV</a>
 
                     </div>
                 </div>
