--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <li class="menu__item" role"none"><a class="close-sidebar menu__link" href="about.html"
                         role="menuitem">About</a>
                 </li>
-                <li class="menu__item" role"none"><a class="close-sidebar menu__link" href="about.html" role="menuitem"
+                <li class="menu__item" role"none"><a class="close-sidebar menu__link" href="about.html#download" role="menuitem"
                         tabindex="-1">Download CV</a></li>
             </ul>
         </nav>
