Add icons to project cards

--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
                             Bootcamp created and validated by tech industry experts and academics.
                             During the Bootcamp, I made five projects myself, which you can see in the <a
                                 href="index.html#projects">projects</a> section.
-                            During the course, I learned Python, and I like this programming language the most. <br><br>
+                                During the course, I got to know Python for the first time and I like this programming language the most. <br><br>
                             I am a hardworking person and I am eager to set myself new challenges. I love learning new things in programming. <br><br>
                             My biggest dream?
                             Work in a professional team where I could further develop my programming skills.</p>
