--- a/index.html
+++ b/index.html
@@ -40,23 +40,23 @@
                 <li class="menu__item" role"none"><a class="close-sidebar menu__link" href="index.html"
                         role="menuitem">Home</a>
                 </li>
-                <li class="menu__item" role"none"><a class="close-sidebar menu__link" href="index.html#projects" role="menuitem"
-                        tabindex="-1">Portfolio</a>
+                <li class="menu__item" role"none"><a class="close-sidebar menu__link" href="index.html#projects"
+                        role="menuitem" tabindex="-1">Portfolio</a>
                 </li>
-                <li class="menu__item" role"none"><a class="close-sidebar menu__link" href="index.html#skills" role="menuitem"
-                        tabindex="-1">Skills</a></li>
+                <li class="menu__item" role"none"><a class="close-sidebar menu__link" href="index.html#skills"
+                        role="menuitem" tabindex="-1">Skills</a></li>
                 <li class="menu__item" role"none"><a class="close-sidebar menu__link" href="about.html"
                         role="menuitem">About</a>
                 </li>
-                <li class="menu__item" role"none"><a class="close-sidebar menu__link" href="about.html#download" role="menuitem"
-                        tabindex="-1">Download CV</a></li>
+                <li class="menu__item" role"none"><a class="close-sidebar menu__link" href="about.html#download"
+                        role="menuitem" tabindex="-1">Download CV</a></li>
             </ul>
         </nav>
         <main id="home" class="content">
             <div class="soc-icons">
-                <a  target="_blank" href="https://www.linkedin.com/in/izabela-krupinska-161a351a5"><img id="soc-linkedin"
+                <a target="_blank" href="https://www.linkedin.com/in/izabela-krupinska-161a351a5"><img id="soc-linkedin"
                         class="soc-link linkedin-link" src="assets/images/linkedin.svg" alt="linkedin logo"></a>
-                <a  target="_blank" href="https://github.com/Izabela88"><img id="soc-github" class="soc-link github-icon"
+                <a target="_blank" href="https://github.com/Izabela88"><img id="soc-github" class="soc-link github-icon"
                         src="assets/images/icons8-github.svg" alt="github logo"></a>
 
             </div>
@@ -66,7 +66,8 @@
             <img id="monster" class="icon" src="assets/images/jelly-black-character-droplet-1.png" alt="stripes">
             <div class="container">
                 <div id="text" class="main-txt">
-                    <p>Welcome beautiful people visiting my portfolio website! <br> I am Izabela - Full Stack Developer</p>
+                    <p>Welcome beautiful people visiting my portfolio website! <br> I am Izabela - Full Stack Developer
+                    </p>
                     <div class="main-links">
 
                         <a href="#projects">my projects</a>
@@ -117,74 +118,131 @@
         <h2>my projects</h2>
         <div class="container">
             <div class="projects-container">
+                <div>
+                    <div class="card">
+                        <div class="imgBx">
+                            <img src="assets/images/jelly-blue-ball-character.png">
+                        </div>
+                        <div class="contentBx">
+                            <h3>mt elevators</h3>
+                            <a target="_blank" class="live-link" href="https://mt-elevators.netlify.app/">live
+                                website</a>
+                            <a target="_blank" class="github-link"
+                                href="https://github.com/Izabela88/mt-elevators">github</a>
+                        </div>
+                        <div class="info-card" tabindex="0">
+                            <span class="card__infoicon">
+                                <img src="assets/images/monitor.png" alt="monitor icon">
+                            </span>
+                            <p class="card__description">desktop only</p>
+                        </div>
+                    </div>
+
+                </div>
                 <!-- https://codepen.io/katywellington91/pen/PoGVzwZ -->
-                <div class="card">
-                    <div class="imgBx">
-                        <img src="assets/images/jelly-blue-ball-character.png">
+                <div>
+                    <div class="card">
+                        <div class="imgBx">
+                            <img src="assets/images/jelly-red-one-eyed-character-in-blue-jumpsuit.png">
+                        </div>
+                        <div class="contentBx">
+                            <h3>dog inn</h3>
+                            <a target="_blank" class="live-link" href="https://izabela88.github.io/dog-inn/">live
+                                website</a>
+                            <a target="_blank" class="github-link"
+                                href="https://github.com/Izabela88/dog-inn">github</a>
+                        </div>
+                        <div class="info-card" tabindex="0">
+                            <span class="card__infoicon">
+                                <img src="assets/images/device.png" alt="monitor icon">
+                            </span>
+                            <p class="card__description">responsive on all devices</p>
+                        </div>
                     </div>
-                    <div class="contentBx">
-                        <h3>mt elevators</h3>
-                        <a target="_blank" class="live-link" href="https://mt-elevators.netlify.app/">live
-                            website</a>
-                        <a target="_blank" class="github-link"
-                            href="https://github.com/Izabela88/mt-elevators">github</a>
+
+                </div>
+                <div>
+                    <div class="card">
+                        <div class="imgBx">
+                            <img src="assets/images/jelly-the-chef-completed-the-order-and-brought-the-dish.png">
+                        </div>
+                        <div class="contentBx">
+                            <h3>cupandcake</h3>
+                            <a target="_blank" class="live-link" href="https://izabela88.github.io/cupandcake/">live
+                                website</a>
+                            <a target="_blank" class="github-link"
+                                href="https://github.com/Izabela88/cupandcake">github</a>
+                        </div>
+                        <div class="info-card" tabindex="0">
+                            <span class="card__infoicon">
+                                <img src="assets/images/device.png" alt="monitor icon">
+                            </span>
+                            <p class="card__description">responsive on all devices</p>
+                        </div>
+                    </div>
+
+                </div>
+                <div>
+
+                    <div class="card">
+                        <div class="imgBx">
+                            <img src="assets/images/jelly-black-character-with-a-long-arm.png">
+                        </div>
+                        <div class="contentBx">
+                            <h3>brainstorm quiz</h3>
+                            <a target="_blank" class="live-link" href="https://brainstorm-quiz-game.herokuapp.com/">live
+                                website</a>
+                            <a target="_blank" class="github-link"
+                                href="https://github.com/Izabela88/brainstorm-quiz">github</a>
+                        </div>
+                        <div class="info-card" tabindex="0">
+                            <span class="card__infoicon">
+                                <img src="assets/images/device.png" alt="monitor icon">
+                            </span>
+                            <p class="card__description">responsive on all devices</p>
+                        </div>
                     </div>
                 </div>
-                <div class="card">
-                    <div class="imgBx">
-                        <img src="assets/images/jelly-red-one-eyed-character-in-blue-jumpsuit.png">
-                    </div>
-                    <div class="contentBx">
-                        <h3>dog inn</h3>
-                        <a target="_blank" class="live-link" href="https://izabela88.github.io/dog-inn/">live
-                            website</a>
-                        <a target="_blank" class="github-link" href="https://github.com/Izabela88/dog-inn">github</a>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="imgBx">
-                        <img src="assets/images/jelly-the-chef-completed-the-order-and-brought-the-dish.png">
-                    </div>
-                    <div class="contentBx">
-                        <h3>cupandcake</h3>
-                        <a target="_blank" class="live-link" href="https://izabela88.github.io/cupandcake/">live
-                            website</a>
-                        <a target="_blank" class="github-link" href="https://github.com/Izabela88/cupandcake">github</a>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="imgBx">
-                        <img src="assets/images/jelly-black-character-with-a-long-arm.png">
-                    </div>
-                    <div class="contentBx">
-                        <h3>brainstorm quiz</h3>
-                        <a target="_blank" class="live-link" href="https://brainstorm-quiz-game.herokuapp.com/">live
-                            website</a>
-                        <a target="_blank" class="github-link"
-                            href="https://github.com/Izabela88/brainstorm-quiz">github</a>
+                <div>
+
+                    <div class="card">
+                        <div class="imgBx">
+                            <img src="assets/images/jelly-yellow-one-eyed-character-with-a-tie-2.png">
+                        </div>
+                        <div class="contentBx">
+                            <h3>walkers</h3>
+                            <a target="_blank" class="live-link" href="https://walkers88.herokuapp.com/">live
+                                website</a>
+                            <a target="_blank" class="github-link"
+                                href="https://github.com/Izabela88/walkers-website">github</a>
+                        </div>
+                        <div class="info-card" tabindex="0">
+                            <span class="card__infoicon">
+                                <img src="assets/images/device.png" alt="monitor icon">
+                            </span>
+                            <p class="card__description">responsive on all devices</p>
+                        </div>
                     </div>
                 </div>
-                <div class="card">
-                    <div class="imgBx">
-                        <img src="assets/images/jelly-yellow-one-eyed-character-with-a-tie-2.png">
-                    </div>
-                    <div class="contentBx">
-                        <h3>walkers</h3>
-                        <a target="_blank" class="live-link" href="https://walkers88.herokuapp.com/">live website</a>
-                        <a target="_blank" class="github-link"
-                            href="https://github.com/Izabela88/walkers-website">github</a>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="imgBx">
-                        <img src="assets/images/jelly-red-one-eyed-character.png">
-                    </div>
-                    <div class="contentBx">
-                        <h3>norah's ceramics</h3>
-                        <a target="_blank" class="live-link" href="https://norahsceramics.herokuapp.com/">live
-                            website</a>
-                        <a target="_blank" class="github-link"
-                            href="https://github.com/Izabela88/norahs-ceramics">github</a>
+                <div>
+
+                    <div class="card">
+                        <div class="imgBx">
+                            <img src="assets/images/jelly-red-one-eyed-character.png">
+                        </div>
+                        <div class="contentBx">
+                            <h3>norah's ceramics</h3>
+                            <a target="_blank" class="live-link" href="https://norahsceramics.herokuapp.com/">live
+                                website</a>
+                            <a target="_blank" class="github-link"
+                                href="https://github.com/Izabela88/norahs-ceramics">github</a>
+                        </div>
+                        <div class="info-card" tabindex="0">
+                            <span class="card__infoicon">
+                                <img src="assets/images/device.png" alt="monitor icon">
+                            </span>
+                            <p class="card__description">responsive on all devices</p>
+                        </div>
                     </div>
                 </div>
             </div>
