--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                         </div>
                         <div class="info-card" tabindex="0">
                             <span class="card__infoicon">
-                                <img src="assets/images/monitor.png" alt="monitor icon">
+                                <img src="assets/images/desktop.svg" alt="monitor icon">
                             </span>
                             <p class="card__description">desktop only</p>
                         </div>
@@ -153,7 +153,7 @@
                         </div>
                         <div class="info-card" tabindex="0">
                             <span class="card__infoicon">
-                                <img src="assets/images/device.png" alt="monitor icon">
+                                <img src="assets/images/responsive.svg" alt="monitor icon">
                             </span>
                             <p class="card__description">responsive on all devices</p>
                         </div>
@@ -174,7 +174,7 @@
                         </div>
                         <div class="info-card" tabindex="0">
                             <span class="card__infoicon">
-                                <img src="assets/images/device.png" alt="monitor icon">
+                                <img src="assets/images/responsive.svg" alt="monitor icon">
                             </span>
                             <p class="card__description">responsive on all devices</p>
                         </div>
@@ -196,7 +196,7 @@
                         </div>
                         <div class="info-card" tabindex="0">
                             <span class="card__infoicon">
-                                <img src="assets/images/device.png" alt="monitor icon">
+                                <img src="assets/images/responsive.svg" alt="monitor icon">
                             </span>
                             <p class="card__description">responsive on all devices</p>
                         </div>
@@ -217,7 +217,7 @@
                         </div>
                         <div class="info-card" tabindex="0">
                             <span class="card__infoicon">
-                                <img src="assets/images/device.png" alt="monitor icon">
+                                <img src="assets/images/responsive.svg" alt="monitor icon">
                             </span>
                             <p class="card__description">responsive on all devices</p>
                         </div>
@@ -238,7 +238,7 @@
                         </div>
                         <div class="info-card" tabindex="0">
                             <span class="card__infoicon">
-                                <img src="assets/images/device.png" alt="monitor icon">
+                                <img src="assets/images/responsive.svg" alt="monitor icon">
                             </span>
                             <p class="card__description">responsive on all devices</p>
                         </div>
