--- a/about.html
+++ b/about.html
@@ -48,43 +48,54 @@
                 <li class="menu__item" role"none"><a class="close-sidebar menu__link" href="about.html"
                         role="menuitem">About</a>
                 </li>
-                <li class="menu__item" role"none"><a class="close-sidebar menu__link" href="about.html#download" role="menuitem"
-                        tabindex="-1">Download CV</a></li>
+                <li class="menu__item" role"none"><a class="close-sidebar menu__link" href="about.html#download"
+                        role="menuitem" tabindex="-1">Download CV</a></li>
             </ul>
         </nav>
     </div>
-        <!-- about -->
-        <section id="about" class="section">
-            <h2>about me</h2>
-            <div class="container">
-                <a class="bck-link" href="index.html">back to home</a>
-                <div class="half">
-                    <div class="about-txt">
-                        <p>I'm self-taught.
-                            I started learning coding at the end of 2019. <br> <br>
-                            2021/2022 was an important time for me.
-                            I have obtained a Diploma in Software Development (E-commerce Applications) from Code Institute.
-                            Code Institute's Diploma in Full Stack Software Development is an intense and rewarding coding
-                            Bootcamp created and validated by tech industry experts and academics.
-                            During the Bootcamp, I made five projects myself, which you can see in the <a
-                                href="index.html#projects">projects</a> section.
-                                During the course, I got to know Python for the first time and I like this programming language the most. <br><br>
-                            I am a hardworking person and I am eager to set myself new challenges. I love learning new things in programming. <br><br>
-                            My biggest dream?
-                            Work in a professional team where I could further develop my programming skills.</p>
-    
-                        <a id="download" class="cv" href="assets/images/Izabela_Krupinska_CV.pdf" download>download my CV</a>
+    <!-- about -->
+    <section id="about" class="section">
+        <h2>about me</h2>
+        <div class="container">
+            <a class="bck-link" href="index.html">back to home</a>
+            <div class="half">
+                <div class="about-txt">
+                    <p>
+                        First and foremost, I love coding, and I'm self-taught. The magic started working when I first clicked "Play" in my
+                        first Udemy course. Wow! - I thought. This is it! I want to do it!
+                        I am a creative person, and that's why creating websites and applications gives me so much joy
+                        and satisfaction. It's a great feeling to see how the code I create starts to work.
+                        I love learning new things. That's what I mainly like about coding. There is no boredom because
+                        there are so many new things to discover!
+                        <br> <br>
+                        2021/2022 was an important time for me.
+                        I have obtained a Diploma in Software Development (E-commerce Applications) from Code Institute.
+                        Code Institute's Diploma in Full Stack Software Development is an intense and rewarding coding
+                        Bootcamp created and validated by tech industry experts and academics.
+                        During the Bootcamp, I made five projects myself, which you can see in the <a
+                            href="index.html#projects">projects</a> section.
+                        <br><br>
+                        I'm an aspiring Software Developer interested in finding my first role as a Backend Developer.
+                        I have experience working with Python, Django, PostgreSQL, JavaScript, React, HTML and CSS. <br><br>
+                        I am a hardworking person and I am eager to set myself new challenges. I love learning new
+                        things in programming. <br><br>
+                        My biggest dream?
+                        Work in a professional team where I could further develop my programming skills.
+                    </p>
 
-                    </div>
-                </div>
-                <div class="half-two">
-                    <div class="me-img">
-                        <img src="assets/images/jelly-yellow-round-character-with-hands-up.png" alt="Author picture">
-                    </div>
+                    <a id="download" class="cv" href="assets/images/Izabela_Krupinska_CV.pdf" download>download my
+                        CV</a>
+
                 </div>
             </div>
-        </section>
- 
+            <div class="half-two">
+                <div class="me-img">
+                    <img src="assets/images/jelly-yellow-round-character-with-hands-up.png" alt="Author picture">
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <footer class="footer">
         <p>Illustrations from
