Update about text

--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
             <div class="half">
                 <div class="about-txt">
                     <p>
-                        First and foremost, I love coding, and I'm self-taught. The magic started working when I first clicked "Play" in my
+                        First and foremost, I love coding, and I'm self-taught. The magic started when I first clicked "Play" in my
                         first Udemy course. Wow! - I thought. This is it! I want to do it!
                         I am a creative person, and that's why creating websites and applications gives me so much joy
                         and satisfaction. It's a great feeling to see how the code I create starts to work.
