--- a/index.html
+++ b/index.html
@@ -12,12 +12,16 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon_package_v0.16/favicon-16x16.png">
     <link rel="manifest" href="favicon_package_v0.16/site.webmanifest">
     <link rel="mask-icon" href="favicon_package_v0.16/safari-pinned-tab.svg" color="#5bbad5">
+
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dokdo&display=swap" rel="stylesheet">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="assets/css/style.css">
     
     <title>P O R T F O L I O</title>
@@ -65,8 +69,8 @@
             <img id="monster" class="icon" src="assets/images/jelly-black-character-droplet-1.png" alt="stripes">
             <div class="container">
                 <div id="text" class="main-txt">
-                    <p>Welcome beautiful people visiting my portfolio website! <br> I am Izabela - Full Stack Developer
-                    </p>
+                    <p>Welcome beautiful people visiting my portfolio website!</p>
+                    <p>I'm Izabela - Software Developer</p>
                     <div class="main-links">
 
                         <a href="#projects">my projects</a>
