Restyled about page

--- a/about.html
+++ b/about.html
@@ -76,10 +76,10 @@
                         I have obtained a Diploma in Software Development (E-commerce Applications) from Code Institute.
                         Code Institute's Diploma in Full Stack Software Development is an intense and rewarding coding
                         Bootcamp created and validated by tech industry experts and academics.
-                        During the Bootcamp, I made five projects myself, which you can see in the <a
-                            href="index.html#projects">projects</a> section.
+                        During the Bootcamp, I made five projects myself, which you can find in <a
+                            href="index.html#projects">the projects</a> section.
                         <br><br>
-                        I'm an aspiring Software Developer interested in finding my first role as a Backend Developer.
+                        I'm an aspiring Software Developer interested in finding my first role as a Python/Django Developer.
                         I have experience working with Python, Django, PostgreSQL, JavaScript, React, HTML and CSS. <br><br>
                         I am a hardworking person and I am eager to set myself new challenges. I love learning new
                         things in programming. <br><br>
@@ -89,13 +89,10 @@
 
                     <a id="download" class="cv" href="assets/images/Izabela_Krupinska_-_Junior_Full_Stack_Developer.pdf" download>download my
                         CV</a>
-
                 </div>
             </div>
-            <div class="half-two">
-                <div class="me-img">
-                    <img src="assets/images/jelly-yellow-round-character-with-hands-up.png" alt="Author picture">
-                </div>
+            <div class="me-img">
+                <img src="assets/images/jelly-blue-character-in-a-tie-with-a-suitcase.png" alt="Author picture">
             </div>
         </div>
     </section>
