Changed icon for brainstorm quiz project card

--- a/index.html
+++ b/index.html
@@ -200,9 +200,9 @@
                         </div>
                         <div class="info-card" tabindex="0">
                             <span class="card__infoicon">
-                                <img src="assets/images/responsive.svg" alt="monitor icon">
+                                <img src="assets/images/desktop.svg" alt="monitor icon">
                             </span>
-                            <p class="card__description">responsive on all devices</p>
+                            <p class="card__description">desktop only</p>
                         </div>
                     </div>
                 </div>
