--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
-    
+
     <title>P O R T F O L I O</title>
 </head>
 
@@ -64,30 +64,33 @@
             <a class="bck-link" href="index.html">back to home</a>
             <div class="half">
                 <div class="about-txt">
-                    <p>
-                        First and foremost, I love coding, and I'm self-taught. The magic started when I first clicked "Play" in my
-                        first Udemy course. Wow! - I thought. This is it! I want to do it!
-                        I am a creative person, and that's why creating websites and applications gives me so much joy
-                        and satisfaction. It's a great feeling to see how the code I create starts to work.
-                        I love learning new things. That's what I mainly like about coding. There is no boredom because
-                        there are so many new things to discover!
-                        <br> <br>
-                        2021/2022 was an important time for me.
-                        I have obtained a Diploma in Software Development (E-commerce Applications) from Code Institute.
-                        Code Institute's Diploma in Full Stack Software Development is an intense and rewarding coding
-                        Bootcamp created and validated by tech industry experts and academics.
-                        During the Bootcamp, I made five projects myself, which you can find in <a
+                    <p>I am a recently graduated aspiring Software Developer interested in finding my first role as a
+                        Back-End Developer (Python/Django/Django REST API).
+                        I have 1+ non-commercial experience working with Python, Django, PostgreSQL, JavaScript, React,
+                        HTML, CSS and also unit testing.</p><br>
+                    <ol>I am:
+                        <li><img src="assets/images/check-mark.png" alt="check mark"> a hardworking person</li>
+                        <li><img src="assets/images/check-mark.png" alt="check mark"> eager to set myself new challenges
+                        </li>
+                        <li><img src="assets/images/check-mark.png" alt="check mark"> highly disciplined and organised
+                        </li>
+                        <li><img src="assets/images/check-mark.png" alt="check mark"> strong focus on learning new
+                            skills and diving into new technologies</li>
+                        <li><img src="assets/images/check-mark.png" alt="check mark"> great at working together with a
+                            team</li>
+                    </ol><br>
+                    <p>2021/2022 was an important time for me. I have obtained a Diploma in Full Stack Development
+                        (E-commerce Applications) with MERIT grade from Code Institute.
+                        During this time, I created five projects myself from scratch. You can find them in <a
                             href="index.html#projects">the projects</a> section.
-                        <br><br>
-                        I'm an aspiring Software Developer interested in finding my first role as a Python/Django Developer.
-                        I have experience working with Python, Django, PostgreSQL, JavaScript, React, HTML and CSS. <br><br>
-                        I am a hardworking person and I am eager to set myself new challenges. I love learning new
-                        things in programming. <br><br>
-                        My biggest dream?
-                        Work in a professional team where I could further develop my programming skills.
-                    </p>
-
-                    <a id="download" class="cv" href="assets/images/Izabela_Krupinska_-_Junior_Software_Developer.pdf" download>download my
+                    </p><br>
+                    <p>The Diploma in Full Stack Software Development (E-commerce Applications) from Code Institute has
+                        been credit-rated by the University of the West of Scotland at level 8 on the Scottish Credit &
+                        Qualifications Framework with 60 SCQF credit points.</p><br>
+                    <p>My biggest dream? Find a job as Junior Software Developer and become a part of a professional
+                        team where I could further develop my programming skills.</p>
+                    <a id="download" class="cv" href="assets/images/Izabela_Krupinska_-_Junior_Software_Developer.pdf"
+                        download>download my
                         CV</a>
                 </div>
             </div>
