--- a/about.html
+++ b/about.html
@@ -74,10 +74,11 @@
                         </li>
                         <li><img src="assets/images/check-mark.png" alt="check mark"> highly disciplined and organised
                         </li>
-                        <li><img src="assets/images/check-mark.png" alt="check mark"> strong focus on learning new
+                        <li><img src="assets/images/check-mark.png" alt="check mark"> strongly focused on learning new
                             skills and diving into new technologies</li>
                         <li><img src="assets/images/check-mark.png" alt="check mark"> great at working together with a
                             team</li>
+                        <li>strongly focused on code quality</li>
                     </ol><br>
                     <p>2021/2022 was an important time for me. I have obtained a Diploma in Full Stack Development
                         (E-commerce Applications) with MERIT grade from Code Institute.
@@ -87,8 +88,7 @@
                     <p>The Diploma in Full Stack Software Development (E-commerce Applications) from Code Institute has
                         been credit-rated by the University of the West of Scotland at level 8 on the Scottish Credit &
                         Qualifications Framework with 60 SCQF credit points.</p><br>
-                    <p>My biggest dream? Find a job as Junior Software Developer and become a part of a professional
-                        team where I could further develop my programming skills.</p>
+                    <p>My biggest dream? To find a job as Junior Software Developer in a supportive company and become a part of a professional team where I could further develop my programming skills.</p>
                     <a id="download" class="cv" href="assets/images/Izabela_Krupinska_-_Junior_Software_Developer.pdf"
                         download>download my
                         CV</a>
