--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
                             skills and diving into new technologies</li>
                         <li><img src="assets/images/check-mark.png" alt="check mark"> great at working together with a
                             team</li>
-                        <li>strongly focused on code quality</li>
+                        <li><img src="assets/images/check-mark.png" alt="check mark"> strongly focused on code quality</li>
                     </ol><br>
                     <p>2021/2022 was an important time for me. I have obtained a Diploma in Full Stack Development
                         (E-commerce Applications) with MERIT grade from Code Institute.
