--- a/index.html
+++ b/index.html
@@ -12,19 +12,14 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon_package_v0.16/favicon-16x16.png">
     <link rel="manifest" href="favicon_package_v0.16/site.webmanifest">
     <link rel="mask-icon" href="favicon_package_v0.16/safari-pinned-tab.svg" color="#5bbad5">
-
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dokdo&display=swap" rel="stylesheet">
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" href="assets/css/style.css">
-    
-    <title>P O R T F O L I O</title>
+    <title>PORTFOLIO IZABELA KRUPINSKA</title>
 </head>
 
 <body>
