--- a/index.html
+++ b/index.html
@@ -19,10 +19,23 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
+
     <title>PORTFOLIO IZABELA KRUPINSKA</title>
 </head>
 
 <body>
+    <!-- intro -->
+        <div class="intro">
+            <div class="intro-text">
+                <div class="hide">
+                    <div class="intro-img"><img src="./assets/images/jelly-the-character-looks-through-the-spyglass-of-the-stars-and-planets.gif" alt=""></div>
+                </div>
+                <h1 class="hide">
+                    <span class="text">be inspired...</span>
+                </h1>
+            </div>
+        </div>
+
     <!-- https://codepen.io/CiTA/pen/bgjKKE   -->
     <!-- menu -->
     <div class="wrapper">
@@ -64,12 +77,12 @@
             <img id="monster" class="icon" src="assets/images/jelly-black-character-droplet-1.png" alt="stripes">
             <div class="container">
                 <div id="text" class="main-txt">
-                    <p>Welcome beautiful people visiting my portfolio website!</p>
-                    <p>I'm Izabela - Software Developer</p>
+                    <p class="main-paragraph-one">Welcome beautiful people visiting my portfolio website!</p>
+                    <p  class="main-paragraph-two">I'm Izabela - Software Developer</p>
                     <div class="main-links">
 
-                        <a href="#projects">my projects</a>
-                        <a href="about.html">about me</a>
+                        <a class="link-one" href="#projects">my projects</a>
+                        <a class="link-two" href="about.html">about me</a>
                     </div>
                 </div>
             </div>
@@ -265,8 +278,10 @@
             All Rights Reserved
         </p>
     </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.2/gsap.min.js"></script>
     <script src="assets/js/navbar.js"></script>
     <script src="assets/js/parallax.js"></script>
+    <script src="assets/js/intro.js"></script>
 </body>
 
 </html>
