Fix bug with intro animation, replace some images

--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@
                 </div>
             </div>
             <div class="me-img">
-                <img src="assets/images/jelly-blue-character-in-a-tie-with-a-suitcase.png" alt="Author picture">
+                <img src="assets/images/jelly-blue-character-in-a-tie-with-a-suitcase.svg" alt="Author picture">
             </div>
         </div>
     </section>
