--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         src="assets/images/icons8-github.svg" alt="github logo"></a>
 
             </div>
-            <img id="snail" class="hero-img" src="assets/images/jelly-yellow-snail-waving-hand.png" alt="snail">
+            <img id="snail" class="hero-img" src="assets/images/jelly-yellow-snail-waving-hand.svg" alt="snail">
             <img id="sun" class="hero-img-two" src="assets/images/jelly-yellow-sun-with-rays-2.png" alt="sun">
             <img id="logo" class="logo" src="assets/images/logo.png" alt="logo">
             <img id="monster" class="icon" src="assets/images/jelly-black-character-droplet-1.png" alt="stripes">
