add text to about section, change order of displaying home page parts

--- a/about.html
+++ b/about.html
@@ -62,7 +62,16 @@
                         Back-End Developer (Python/Django/Django REST API).
                         I have 1+ non-commercial experience working with Python, Django, PostgreSQL, JavaScript, React,
                         HTML, CSS and also unit testing.</p><br>
-                    <ol>I am:
+
+                    <p>2021/2022 was an important time for me. I have obtained a Diploma in Full Stack Development
+                        (E-commerce Applications) with MERIT grade from Code Institute.
+                        During this time, I created five projects myself from scratch. You can find them in <a
+                            href="index.html#projects">the projects</a> section.
+                    </p><br>
+                    <p>The Diploma in Full Stack Software Development (E-commerce Applications) from Code Institute has
+                        been credit-rated by the University of the West of Scotland at level 8 on the Scottish Credit &
+                        Qualifications Framework with 60 SCQF credit points.</p><br>
+                    <ol><li class="title">It's a great idea to have me in your company because I am:</li>
                         <li><img src="assets/images/check-mark.png" alt="check mark"> a hardworking person</li>
                         <li><img src="assets/images/check-mark.png" alt="check mark"> eager to set myself new challenges
                         </li>
@@ -73,16 +82,13 @@
                         <li><img src="assets/images/check-mark.png" alt="check mark"> great at working together with a
                             team</li>
                         <li><img src="assets/images/check-mark.png" alt="check mark"> strongly focused on code quality</li>
+                        <li class="title">... and except that I am also:</li>
+                        <li><img src="assets/images/check-mark.png" alt="check mark"> a geek person (I can't resist the movie gadgets)</li>
+                        <li><img src="assets/images/check-mark.png" alt="check mark">  a gamer (World of Warcraft - my favourite 🖤)</li>
+                        <li><img src="assets/images/check-mark.png" alt="check mark">  a big fan of a healthy lifestyle</li>
+                        <li><img src="assets/images/check-mark.png" alt="check mark"> a huge fan of 80s music and movies</li>
                     </ol><br>
-                    <p>2021/2022 was an important time for me. I have obtained a Diploma in Full Stack Development
-                        (E-commerce Applications) with MERIT grade from Code Institute.
-                        During this time, I created five projects myself from scratch. You can find them in <a
-                            href="index.html#projects">the projects</a> section.
-                    </p><br>
-                    <p>The Diploma in Full Stack Software Development (E-commerce Applications) from Code Institute has
-                        been credit-rated by the University of the West of Scotland at level 8 on the Scottish Credit &
-                        Qualifications Framework with 60 SCQF credit points.</p><br>
-                    <p>My biggest dream? To find a job as Junior Software Developer in a supportive company and become a part of a professional team where I could further develop my programming skills.</p>
+                    <p>My biggest dream? To find a job in a supportive company and become a part of a professional team where I could further develop my programming skills.</p>
                     <a id="download" class="cv" href="assets/images/Izabela_Krupinska_-_Junior_Software_Developer.pdf"
                         download>download my
                         CV</a>
