Restyle intro text

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <div class="intro-img"><img src="./assets/images/jelly-the-character-looks-through-the-spyglass-of-the-stars-and-planets.gif" alt=""></div>
                 </div>
                 <h1 class="hide">
-                    <span class="text">don't stop dreaming...</span>
+                    <span class="text">don't stop dreaming</span>
                 </h1>
             </div>
         </div>
