Add text to hero

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="container">
                 <div id="text" class="main-txt">
                     <p class="main-paragraph-one">Welcome beautiful people visiting my portfolio website!</p>
-                    <p  class="main-paragraph-two">I'm Izabela - Software Developer</p>
+                    <p  class="main-paragraph-two">I'm Izabela - Junior Software Developer</p>
                     <div class="main-links">
                         <a class="link-one" href="#projects">my projects</a>
                         <a class="link-two" href="about.html">about me</a>
