Restyled about page

--- a/about.html
+++ b/about.html
@@ -94,31 +94,14 @@
                         CV</a>
                 </div>
             </div>
-            <div class="me-img">
-                <img src="assets/images/jelly-blue-character-in-a-tie-with-a-suitcase.svg" alt="Author picture">
-            </div>
         </div>
+        <div class="me-imgs">
+            <img class="me-img" src="assets/images/jelly-blue-character-in-a-tie-with-a-suitcase.svg" alt="Author picture">
+            <img class="me-img-two" src="assets/images/jelly-lettering-hey.svg" alt="stars">
+            <img class="me-img-three" src="assets/images/jelly-transparent-speech-bubble.svg" alt="Author picture">
+        </div>
+
     </section>
-
-
-    <footer class="footer">
-        <p>Illustrations from
-            <a target="_blank" href="https://icons8.com/illustrations/style--jelly">Icons 8 Ouch</a>
-        </p>
-        <p>Social icons from <a target="_blank" href="https://icons8.com/">Icons 8</a></p>
-        <p>Skills icons from <a target="_blank" href="https://www.flaticon.com/">Freepik - Flaticon</a></p>
-        <p class="rights">
-            Izabela Krupinska &copy;
-            <span id="copyright">
-                <script>
-                    document
-                        .getElementById("copyright")
-                        .appendChild(document.createTextNode(new Date().getFullYear()));
-                </script>
-            </span>
-            All Rights Reserved
-        </p>
-    </footer>
     <script src="assets/js/navbar.js"></script>
     <script src="assets/js/parallax.js"></script>
 </body>
